[gd_scene load_steps=5 format=4 uid="uid://bk8xhd2kwsvjy"]

[ext_resource type="Script" path="res://assets/scripts/levels/room_2.gd" id="1_r0fit"]
[ext_resource type="TileSet" uid="uid://cvuarly5xk4wp" path="res://assets/dungeon_tileset_bg.tres" id="2_ncoue"]
[ext_resource type="TileSet" uid="uid://d0eusdwt4lmko" path="res://assets/dungeon_tileset.tres" id="3_we1yg"]
[ext_resource type="PackedScene" uid="uid://cfesvjhulwkvx" path="res://scenes/items/fire.tscn" id="4_sl24d"]

[node name="Room2" type="Node2D"]
script = ExtResource("1_r0fit")

[node name="Background" type="TileMapLayer" parent="."]
z_index = -2
tile_map_data = PackedByteArray("AAACAP//AAACAA8AAAACAAAAAAACAA8AAAADAP//AAACAA8AAAADAAAAAAACAA8AAAAEAP//AAACAA8AAAAEAAAAAAACAA8AAAD//wEAAAACAA8AAAD//wIAAAACAA8AAAD//wMAAAACAA8AAAD//wQAAAACAA8AAAD+/wEAAAABAA8AAAD+/wIAAAABAA8AAAD+/wMAAAACAA8AAAD+/wQAAAACAA8AAAAAAAEAAAACAA8AAAAAAAIAAAACAA8AAAAAAAMAAAACAA8AAAAAAAQAAAACAA8AAAABAAEAAAACAA8AAAABAAIAAAACAA8AAAABAAMAAAACAA8AAAABAAQAAAACAA8AAAACAAEAAAACAA8AAAACAAIAAAACAA8AAAACAAMAAAACAA8AAAACAAQAAAACAA8AAAADAAEAAAACAA8AAAADAAIAAAACAA8AAAADAAMAAAACAA8AAAADAAQAAAACAA8AAAAEAAEAAAACAA8AAAAEAAIAAAACAA8AAAAEAAMAAAACAA8AAAAEAAQAAAACAA8AAAACAP7/AAACAA8AAAADAP7/AAACAA8AAAAEAP7/AAACAA8AAAD+/wkAAAABAA8AAAD//wkAAAACAA8AAAAAAAkAAAACAA8AAAABAAkAAAAEAA8AAAAJAAEAAAACABEAAAAJAAAAAAACAA8AAAAJAP//AAACAA8AAAAJAP7/AAACAA8AAAABAPb/AAAEAA8AAAAAAPb/AAACAA8AAAD///b/AAACAA8AAAD+//b/AAABAA8AAAD2//7/AAACAA8AAAD2////AAACAA8AAAD2/wAAAAACAA8AAAD2/wEAAAACABEAAAD+//f/AAABAA8AAAD+//j/AAABAA8AAAD+//n/AAABAA8AAAD+//r/AAABAA8AAAD+/wUAAAACAA8AAAD+/wYAAAAGABEAAAD+/wcAAAABAA8AAAD+/wgAAAABAA8AAAD///f/AAACAA8AAAD///j/AAACAA8AAAD///n/AAACAA8AAAD//wUAAAACAA8AAAD//wYAAAACAA8AAAD//wcAAAACAA8AAAD//wgAAAACAA8AAAAAAPf/AAACAA8AAAAAAPj/AAACAA8AAAAAAPn/AAACAA8AAAAAAAUAAAACAA8AAAAAAAYAAAACAA8AAAAAAAcAAAACAA8AAAAAAAgAAAACAA8AAAABAPf/AAAEAA8AAAABAPj/AAAEAA8AAAABAPn/AAAEAA8AAAABAAUAAAACAA8AAAABAAYAAAACAA8AAAABAAcAAAAFABEAAAABAAgAAAAEAA8AAAACAAUAAAACAA8AAAACAAYAAAACAA8AAAACAAcAAAACABEAAAADAAUAAAACAA8AAAADAAYAAAACAA8AAAADAAcAAAACABEAAAAEAAUAAAACAA8AAAAEAAYAAAACAA8AAAAEAAcAAAACABEAAAAFAP7/AAACAA8AAAAFAP//AAACAA8AAAAFAAAAAAACAA8AAAAFAAEAAAACAA8AAAAFAAIAAAACAA8AAAAFAAMAAAACAA8AAAAFAAQAAAACAA8AAAAFAAUAAAACAA8AAAAFAAYAAAACAA8AAAAFAAcAAAACABEAAAAGAP7/AAACAA8AAAAGAP//AAACAA8AAAAGAAAAAAACAA8AAAAGAAEAAAACAA8AAAAGAAIAAAACAA8AAAAGAAMAAAACAA8AAAAGAAQAAAACAA8AAAAGAAUAAAACAA8AAAAGAAYAAAACAA8AAAAGAAcAAAACABEAAAAHAP7/AAACAA8AAAAHAP//AAACAA8AAAAHAAAAAAACAA8AAAAHAAEAAAACAA8AAAAHAAIAAAACAA8AAAAHAAMAAAACAA8AAAAHAAQAAAACAA8AAAAHAAUAAAACAA8AAAAHAAYAAAACAA8AAAAHAAcAAAACABEAAAAIAP7/AAACAA8AAAAIAP//AAACAA8AAAAIAAAAAAACAA8AAAAIAAEAAAAFABEAAAD///r/AAACAA8AAAAAAPr/AAACAA8AAAABAPr/AAAEAA8AAAD3//v/AAABAA4AAAD3//z/AAABAA8AAAD3//3/AAABAA8AAAD3//7/AAACAA8AAAD3////AAACAA8AAAD3/wAAAAACAA8AAAD3/wEAAAAGABEAAAD3/wIAAAABAA8AAAD3/wMAAAABAA8AAAD3/wQAAAABAA8AAAD3/wUAAAABAA8AAAD3/wYAAAABAA8AAAD3/wcAAAABABEAAAD4//v/AAACAA4AAAD4//z/AAACAA8AAAD4//3/AAACAA8AAAD4//7/AAACAA8AAAD4////AAACAA8AAAD4/wAAAAACAA8AAAD4/wEAAAACAA8AAAD4/wIAAAACAA8AAAD4/wMAAAACAA8AAAD4/wQAAAACAA8AAAD4/wUAAAACAA8AAAD4/wYAAAACAA8AAAD4/wcAAAACABEAAAD5//v/AAACAA4AAAD5//z/AAACAA8AAAD5//3/AAACAA8AAAD5//7/AAACAA8AAAD5////AAACAA8AAAD5/wAAAAACAA8AAAD5/wEAAAACAA8AAAD5/wIAAAACAA8AAAD5/wMAAAACAA8AAAD5/wQAAAACAA8AAAD5/wUAAAACAA8AAAD5/wYAAAACAA8AAAD5/wcAAAACABEAAAD6//v/AAACAA4AAAD6//z/AAACAA8AAAD6//3/AAACAA8AAAD6//7/AAACAA8AAAD6////AAACAA8AAAD6/wAAAAACAA8AAAD6/wEAAAACAA8AAAD6/wIAAAACAA8AAAD6/wMAAAACAA8AAAD6/wQAAAACAA8AAAD6/wUAAAACAA8AAAD6/wYAAAACAA8AAAD6/wcAAAACABEAAAD7//v/AAACAA4AAAD7//z/AAACAA8AAAD7//3/AAACAA8AAAD7//7/AAACAA8AAAD7////AAACAA8AAAD7/wAAAAACAA8AAAD7/wEAAAACAA8AAAD7/wIAAAACAA8AAAD7/wMAAAACAA8AAAD7/wQAAAACAA8AAAD7/wUAAAACAA8AAAD7/wYAAAACAA8AAAD7/wcAAAACABEAAAD8//v/AAACAA4AAAD8//z/AAACAA8AAAD8//3/AAACAA8AAAD8//7/AAACAA8AAAD8////AAACAA8AAAD8/wAAAAACAA8AAAD8/wEAAAACAA8AAAD8/wIAAAACAA8AAAD8/wMAAAACAA8AAAD8/wQAAAACAA8AAAD8/wUAAAACAA8AAAD8/wYAAAACAA8AAAD8/wcAAAACABEAAAD9//v/AAAEAA4AAAD9//z/AAAEAA8AAAD9//3/AAAEAA8AAAD9//7/AAAEAA8AAAD9////AAAEAA8AAAD9/wAAAAAEAA8AAAD9/wEAAAAEAA8AAAD9/wIAAAAEAA8AAAD9/wMAAAACAA8AAAD9/wQAAAACAA8AAAD9/wUAAAACAA8AAAD9/wYAAAAFABEAAAD9/wcAAAAEABEAAAD+//v/AAABAA8AAAD+//z/AAABAA8AAAD+//3/AAABAA8AAAD+//7/AAABAA8AAAD+////AAABAA8AAAD+/wAAAAABAA8AAAD///v/AAACAA8AAAD///z/AAACAA8AAAD///3/AAACAA8AAAD///7/AAACAA8AAAD/////AAACAA8AAAD//wAAAAACAA8AAAAAAPv/AAACAA8AAAAAAPz/AAACAA8AAAAAAP3/AAACAA8AAAAAAP7/AAACAA8AAAAAAP//AAACAA8AAAAAAAAAAAACAA8AAAABAPv/AAAEAA8AAAABAPz/AAAEAA8AAAABAP3/AAAEAA8AAAABAP7/AAACAA8AAAABAP//AAACAA8AAAABAAAAAAACAA8AAAAIAAIAAAAEAA8AAAAIAAMAAAAEAA8AAAAIAAQAAAAEAA8AAAAIAAUAAAAEAA8AAAAIAAYAAAAEAA8AAAAIAAcAAAAEABEAAAD2//j/AAAFABAAAAD2//n/AAAFABAAAAD2//r/AAAFABAAAAD2//v/AAAFABAAAAD2//z/AAAFABAAAAD2//3/AAAFABAAAAD2//b/AAAFABAAAAD3//b/AAAFABAAAAD4//b/AAAFABAAAAD5//b/AAAFABAAAAD6//b/AAAFABAAAAD7//b/AAAFABAAAAD8//b/AAAFABAAAAD9//b/AAAFABAAAAD2//f/AAAFABAAAAD3//f/AAAFABAAAAD4//f/AAAFABAAAAD5//f/AAAFABAAAAD6//f/AAAFABAAAAD7//f/AAAFABAAAAD8//f/AAAFABAAAAD9//f/AAAFABAAAAD3//j/AAAFABAAAAD3//n/AAAFABAAAAD4//j/AAAFABAAAAD4//n/AAAFABAAAAD5//j/AAAFABAAAAD5//n/AAAFABAAAAD6//j/AAAFABAAAAD6//n/AAAFABAAAAD7//j/AAAFABAAAAD7//n/AAAFABAAAAD8//j/AAAFABAAAAD8//n/AAAFABAAAAD9//j/AAAFABAAAAD9//n/AAAFABAAAAD3//r/AAAFABAAAAD4//r/AAAFABAAAAD5//r/AAAFABAAAAD6//r/AAAFABAAAAD7//r/AAAFABAAAAD8//r/AAAFABAAAAD9//r/AAAFABAAAAACAPb/AAAFABAAAAACAPf/AAAFABAAAAACAPj/AAAFABAAAAACAPn/AAAFABAAAAACAPr/AAAFABAAAAACAPv/AAAFABAAAAACAPz/AAAFABAAAAADAPb/AAAFABAAAAADAPf/AAAFABAAAAADAPj/AAAFABAAAAADAPn/AAAFABAAAAADAPr/AAAFABAAAAADAPv/AAAFABAAAAADAPz/AAAFABAAAAAEAPb/AAAFABAAAAAEAPf/AAAFABAAAAAEAPj/AAAFABAAAAAEAPn/AAAFABAAAAAEAPr/AAAFABAAAAAEAPv/AAAFABAAAAAEAPz/AAAFABAAAAAFAPb/AAAFABAAAAAFAPf/AAAFABAAAAAFAPj/AAAFABAAAAAFAPn/AAAFABAAAAAFAPr/AAAFABAAAAAFAPv/AAAFABAAAAAFAPz/AAAFABAAAAAGAPb/AAAFABAAAAAGAPf/AAAFABAAAAAGAPj/AAAFABAAAAAGAPn/AAAFABAAAAAGAPr/AAAFABAAAAAGAPv/AAAFABAAAAAGAPz/AAAFABAAAAAHAPb/AAAFABAAAAAHAPf/AAAFABAAAAAHAPj/AAAFABAAAAAHAPn/AAAFABAAAAAHAPr/AAAFABAAAAAHAPv/AAAFABAAAAAHAPz/AAAFABAAAAAIAPb/AAAFABAAAAAIAPf/AAAFABAAAAAIAPj/AAAFABAAAAAIAPn/AAAFABAAAAAIAPr/AAAFABAAAAAIAPv/AAAFABAAAAAIAPz/AAAFABAAAAAJAPb/AAAFABAAAAAJAPf/AAAFABAAAAAJAPj/AAAFABAAAAAJAPn/AAAFABAAAAAJAPr/AAAFABAAAAAJAPv/AAAFABAAAAAJAPz/AAAFABAAAAAJAAIAAAAFABAAAAAJAAMAAAAFABAAAAAJAAQAAAAFABAAAAAJAAUAAAAFABAAAAAJAAYAAAAFABAAAAAJAAcAAAAFABAAAAAJAAgAAAAFABAAAAAJAAkAAAAFABAAAAACAAgAAAAFABAAAAACAAkAAAAFABAAAAADAAgAAAAFABAAAAADAAkAAAAFABAAAAAEAAgAAAAFABAAAAAEAAkAAAAFABAAAAAFAAgAAAAFABAAAAAFAAkAAAAFABAAAAAGAAgAAAAFABAAAAAGAAkAAAAFABAAAAAHAAgAAAAFABAAAAAHAAkAAAAFABAAAAAIAAgAAAAFABAAAAAIAAkAAAAFABAAAAD2/wgAAAAFABAAAAD2/wkAAAAFABAAAAD3/wgAAAAFABAAAAD3/wkAAAAFABAAAAD4/wgAAAAFABAAAAD4/wkAAAAFABAAAAD5/wgAAAAFABAAAAD5/wkAAAAFABAAAAD6/wgAAAAFABAAAAD6/wkAAAAFABAAAAD7/wgAAAAFABAAAAD7/wkAAAAFABAAAAD8/wgAAAAFABAAAAD8/wkAAAAFABAAAAD9/wgAAAAFABAAAAD9/wkAAAAFABAAAAD2/wIAAAAFABAAAAD2/wMAAAAFABAAAAD2/wQAAAAFABAAAAD2/wUAAAAFABAAAAD2/wYAAAAFABAAAAD2/wcAAAAFABAAAAACAP3/AAAFABAAAAADAP3/AAAFABAAAAAEAP3/AAAFABAAAAAFAP3/AAAFABAAAAAGAP3/AAAFABAAAAAHAP3/AAAFABAAAAAIAP3/AAAFABAAAAAJAP3/AAAFABAAAAA=")
tile_set = ExtResource("2_ncoue")

[node name="Midground" type="TileMapLayer" parent="."]
z_index = -1
tile_map_data = PackedByteArray("AAD2//3/AAACAAQAAAD2//7/AAACAAUAAAD2/wAAAAACAAQAAAD2/wEAAAACAAUAAAAJAAAAAAACAAQAAAAJAAEAAAACAAUAAAAJAP3/AAACAAQAAAAJAP7/AAACAAUAAAD+/wkAAAAEAAMAAAABAAkAAAAEAAMAAAABAPb/AAAEAAMAAAD+//b/AAAEAAMAAAD3/wAAAAAEAAEAAAD3/wEAAAAEAAIAAAD3/wIAAAAEAAMAAAD3/wMAAAAEAAMAAAD3/wQAAAAEAAMAAAD3/wUAAAAEAAMAAAD3/wYAAAABAAYAAAD3/wcAAAABAAcAAAD4/wYAAAACAAQAAAD4/wcAAAACAAUAAAD5/wYAAAACAAQAAAD5/wcAAAACAAUAAAD6/wYAAAACAAQAAAD6/wcAAAACAAUAAAD7/wYAAAACAAQAAAD7/wcAAAACAAUAAAD8/wYAAAACAAQAAAD8/wcAAAACAAUAAAD9/wYAAAALAAcAAAD9/wcAAAAEAAcAAAD9//v/AAAEAAIAAAD9//z/AAAEAAMAAAD9//3/AAAEAAMAAAD9//7/AAAEAAMAAAD9////AAAEAAMAAAD9/wAAAAAEAAMAAAD9/wEAAAAEAAMAAAD9/wIAAAABAAYAAAD9//r/AAAEAAEAAAD3//r/AAABAAEAAAD3//v/AAABAAIAAAD4//r/AAACAAQAAAD4//v/AAACAAUAAAD5//r/AAACAAQAAAD5//v/AAACAAUAAAD6//r/AAACAAQAAAD6//v/AAACAAUAAAD7//r/AAACAAQAAAD7//v/AAACAAUAAAD8//r/AAACAAQAAAD8//v/AAACAAUAAAD3//z/AAAEAAMAAAD3//3/AAAEAAYAAAD3//7/AAAEAAcAAAD+//f/AAAEAAMAAAD+//j/AAAEAAMAAAD+//n/AAAEAAMAAAD+//r/AAAEAAMAAAD+//v/AAAEAAMAAAD+//z/AAAEAAMAAAD+//3/AAAEAAMAAAD+//7/AAAEAAMAAAD+////AAAEAAMAAAD+/wAAAAAEAAMAAAD+/wEAAAAEAAMAAAD+/wIAAAAEAAYAAAD+/wYAAAAEAAIAAAD+/wcAAAAEAAMAAAD+/wgAAAAEAAMAAAABAAcAAAABAAIAAAABAAgAAAAEAAMAAAABAAYAAAABAAEAAAACAAYAAAACAAQAAAACAAcAAAACAAUAAAADAAYAAAACAAQAAAADAAcAAAACAAUAAAAEAAYAAAACAAQAAAAEAAcAAAACAAUAAAAFAAYAAAACAAQAAAAFAAcAAAACAAUAAAAGAAYAAAACAAQAAAAGAAcAAAACAAUAAAAHAAYAAAACAAQAAAAHAAcAAAACAAUAAAAIAAYAAAAEAAYAAAAIAAcAAAAEAAcAAAAIAAEAAAADAAIAAAAIAAIAAAAEAAMAAAAIAAMAAAAEAAMAAAAIAAQAAAAEAAMAAAAIAAUAAAAEAAMAAAAIAAAAAAADAAEAAAACAAAAAAACAAQAAAACAAEAAAACAAUAAAADAAAAAAACAAQAAAADAAEAAAACAAUAAAAEAAAAAAACAAQAAAAEAAEAAAACAAUAAAAFAAAAAAACAAQAAAAFAAEAAAACAAUAAAAGAAAAAAACAAQAAAAGAAEAAAACAAUAAAAHAAAAAAACAAQAAAAHAAEAAAACAAUAAAABAPf/AAAEAAMAAAABAPj/AAAEAAMAAAABAPn/AAAEAAMAAAABAPr/AAAEAAMAAAABAPv/AAAEAAMAAAABAPz/AAAEAAMAAAABAP3/AAABAAYAAAABAP7/AAABAAcAAAACAP3/AAACAAQAAAACAP7/AAACAAUAAAADAP3/AAACAAQAAAADAP7/AAACAAUAAAAEAP3/AAACAAQAAAAEAP7/AAACAAUAAAAFAP3/AAACAAQAAAAFAP7/AAACAAUAAAAGAP3/AAACAAQAAAAGAP7/AAACAAUAAAAHAP3/AAACAAQAAAAHAP7/AAACAAUAAAAIAP3/AAACAAQAAAAIAP7/AAACAAUAAAD+/wUAAAAEAAEAAAD+/wMAAAAEAAcAAAD9/wMAAAABAAcAAAD9/wUAAAABAAEAAAABAAAAAAABAAEAAAABAAEAAAABAAIAAAABAAIAAAAFAAMAAAABAAMAAAAFAAQAAAA=")
tile_set = ExtResource("3_we1yg")

[node name="NorthCoverBG" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+//b/AAAFABAAAAD///b/AAAFABAAAAAAAPb/AAAFABAAAAABAPb/AAAFABAAAAD+//f/AAAFABAAAAD+//j/AAAFABAAAAD+//n/AAAFABAAAAD+//r/AAAFABAAAAD+//v/AAAFABAAAAD+//z/AAAFABAAAAD+//3/AAAFABAAAAD///f/AAAFABAAAAD///j/AAAFABAAAAD///n/AAAFABAAAAD///r/AAAFABAAAAD///v/AAAFABAAAAD///z/AAAFABAAAAD///3/AAAFABAAAAAAAPf/AAAFABAAAAAAAPj/AAAFABAAAAAAAPn/AAAFABAAAAAAAPr/AAAFABAAAAAAAPv/AAAFABAAAAAAAPz/AAAFABAAAAAAAP3/AAAFABAAAAABAPf/AAAFABAAAAABAPj/AAAFABAAAAABAPn/AAAFABAAAAABAPr/AAAFABAAAAABAPv/AAAFABAAAAABAPz/AAAFABAAAAABAP3/AAAFABAAAAA=")
enabled = false
tile_set = ExtResource("2_ncoue")

[node name="NorthCover" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD///3/AAACAAQAAAD///7/AAACAAUAAAAAAP3/AAACAAQAAAAAAP7/AAACAAUAAAABAP3/AAACAAQAAAABAP7/AAACAAUAAAD+//3/AAABAAEAAAD+//7/AAABAAIAAAA=")
enabled = false
tile_set = ExtResource("3_we1yg")

[node name="EastCoverBG" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAJAP3/AAAFABAAAAAJAP7/AAAFABAAAAAJAP//AAAFABAAAAAJAAAAAAAFABAAAAAJAAEAAAAFABAAAAAIAP7/AAACAA8AAAAIAP//AAACAA8AAAAIAAAAAAACAA8AAAAIAAEAAAACAA8AAAAIAP3/AAAFABAAAAA=")
enabled = false
tile_set = ExtResource("2_ncoue")

[node name="EastCover" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIAAAAAAAEAAQAAAAIAAEAAAAEAAUAAAAIAP7/AAAEAAIAAAAIAP//AAAEAAMAAAAIAP3/AAAEAAEAAAA=")
enabled = false
tile_set = ExtResource("3_we1yg")

[node name="SouthCoverBG" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+/wgAAAAFABAAAAD//wgAAAAFABAAAAAAAAgAAAAFABAAAAABAAgAAAAFABAAAAD+/wcAAAACAA8AAAD//wcAAAACAA8AAAAAAAcAAAACAA8AAAABAAcAAAACAA8AAAD+/wkAAAAFABAAAAD//wkAAAAFABAAAAAAAAkAAAAFABAAAAABAAkAAAAFABAAAAA=")
enabled = false
tile_set = ExtResource("2_ncoue")

[node name="SouthCover" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD//wYAAAACAAQAAAD//wcAAAACAAUAAAAAAAYAAAACAAQAAAAAAAcAAAACAAUAAAABAAYAAAACAAQAAAABAAcAAAACAAUAAAD+/wYAAAABAAYAAAD+/wcAAAABAAcAAAA=")
enabled = false
tile_set = ExtResource("3_we1yg")

[node name="WestCoverBG" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD2//7/AAAFABAAAAD2////AAAFABAAAAD2/wAAAAAFABAAAAD2/wEAAAAFABAAAAD2//3/AAAFABAAAAD3//7/AAACAA8AAAD3////AAACAA8AAAD3/wAAAAACAA8AAAD3/wEAAAACAA8AAAD3//3/AAACAA8AAAA=")
enabled = false
tile_set = ExtResource("2_ncoue")

[node name="WestCover" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD3//3/AAAEAAMAAAD3//7/AAAEAAMAAAD3////AAAEAAMAAAD3/wAAAAAEAAMAAAD3/wEAAAAEAAMAAAA=")
enabled = false
tile_set = ExtResource("3_we1yg")

[node name="Fire" parent="." instance=ExtResource("4_sl24d")]
position = Vector2(104, 48)
lit = false
